--- a/views/pages/account/edit-password.ejs
+++ b/views/pages/account/edit-password.ejs
@@ -26,7 +26,7 @@
         <div class="col-sm-6">
           <div class="form-group text-right">
             <a class="btn btn-outline-info" href="/account">Cancel</a>
-            <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
+            <ajax-button type="submit" :syncing="syncing" class="btn btn-info">Save changes</ajax-button>
           </div>
         </div>
       </div>
