--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -27,7 +27,7 @@
         </div>
         <p class="text-danger" v-if="cloudError"><small>An error occured while processing your request. Please check your information and try again, or <a href="/contact">contact support</a> if the error persists.</small></p>
         <div class="form-group">
-          <ajax-button type="submit" :syncing="syncing" class="btn btn-dark btn-lg btn-block">Send message</ajax-button>
+          <ajax-button type="submit" :syncing="syncing" class="btn btn-info btn-lg btn-block">Send message</ajax-button>
         </div>
       </ajax-form>
     </div>
